Completed account reg and login using email and password based accounts

--- a/OurSpace/Podfile
+++ b/OurSpace/Podfile
@@ -1,6 +1,13 @@
 source 'https://github.com/CocoaPods/Specs.git'
     target 'OurSpace' do
+    use_frameworks!
+
     pod 'GooglePlaces'
     pod 'GooglePlacePicker'
     pod 'GoogleMaps'
+    pod 'GoogleSignIn'
+    
+    pod 'Firebase/Core'
+    pod 'Firebase/Auth'
+
 end
